
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "della_utils"
version = "0.0.1"
description = "A CLI Python package for Della Utils"
authors = [
  { name="Rob Bierman", email="rbierman@princeton.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dutils = "della_utils.cli:main"
